@@ -5,7 +5,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.annotation.Resource;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @RestController
 public class PluginController {
@@ -20,7 +20,7 @@ public class PluginController {
     @GetMapping("install")
     public void installPlugin() {
 //        configurableApplicationContext.refresh();
-        pluginService.loadAndRegister(Path.of("/Users/chenhaiming/workCode/EVISION/evision_iot_driver/evision-driver/tcp-driver/target/tcp-driver-3.4.1.jar"));
+        pluginService.loadAndRegister(Paths.get("/Users/chenhaiming/workCode/EVISION/evision_iot_driver/evision-driver/tcp-driver/target/tcp-driver-3.4.1.jar"));
     }
 
 
